Complete Hero Background

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,32 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
+@import url("https://fonts.googleapis.com/css2?family=Martel+Sans&family=Montserrat&family=Oxygen:wght@400&display=swap");
 
 /* Components/Navbar.js */
 .navbar {
-    padding: 1rem 1rem;
-    background-color: #0042c6;
+    padding: 2rem 1rem;
+    background-color: transparent;
+    position: absolute;
+    width: 100%;
+}
+
+.navbar-brand {
+    margin-left: 2rem;
+}
+
+#hd-logo {
+    transform: scale(1.3);
 }
 
 .navbar-item {
     color: #fff;
+    font-family: "Oxygen";
+    font-size: 1.2rem;
+    margin-right: 1rem;
 }
 
 .navbar-burger {
     color: #fff;
+    transform: scale(1.3);
 }
 
 .navbar-burger:hover {
@@ -20,9 +35,83 @@
 }
 
 .navbar-menu {
-    background-color: #0042c6;
+    background-color: transparent;
+}
+
+.navbar-end {
+    margin-right: 2rem;
 }
 
 .navbar-button:hover {
     cursor: pointer;
+}
+
+.navbar-button::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    border-radius: 4px;
+    background-color: white;
+    bottom: 4px;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform 0.3s ease-in-out;
+}
+
+.navbar-button:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
+/* Components/HeroBackground */
+.hero-bg {
+    position: absolute;
+    background-color: #0042c6;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+}
+
+.hero-bg div {
+    transition: all 0.5s ease-out;
+}
+
+.hero-bg div img {
+    position: absolute;
+}
+
+#hero-bg-blob {
+    top: 45vh;
+    left: -5vw;
+    width: 600px;
+}
+
+@media only screen and (max-width: 1026px) {
+    .hero-bg-hidden {
+        display: none;
+    }
+    #hero-bg-blob {
+        top: 45vh;
+        left: -40vw;
+    }
+}
+
+/* Pages/index.js */
+.hero {
+    /* background-color: #0042c6; */
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.test {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-color: #fff;
+    margin-top: 100px;
 }
