--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,6 +89,39 @@
     width: 600px;
 }
 
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(720deg);
+    }
+}
+
+@keyframes grow {
+    0% {
+        transform: scale(1) rotate(37deg);
+    }
+    50% {
+        transform: scale(1.3) rotate(96deg);
+    }
+    100% {
+        transform: scale(1) rotate(37deg);
+    }
+}
+
+#hero-bg-plus {
+    animation: spin 2.5s ease-in-out infinite reverse;
+}
+
+#hero-bg-blob-circle {
+    animation: spin 10s linear infinite;
+}
+
+#hero-bg-asterisk {
+    animation: grow 5s ease-in-out infinite;
+}
+
 @media only screen and (max-width: 1026px) {
     .hero-bg-hidden {
         display: none;
