--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,27 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 @import url("https://fonts.googleapis.com/css2?family=Martel+Sans&family=Montserrat&family=Oxygen:wght@400&display=swap");
 
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(720deg);
+    }
+}
+
+@keyframes grow {
+    0% {
+        transform: scale(1) rotate(37deg);
+    }
+    50% {
+        transform: scale(1.3) rotate(96deg);
+    }
+    100% {
+        transform: scale(1) rotate(37deg);
+    }
+}
+
 /* Components/Navbar.js */
 .navbar {
     padding: 2rem 1rem;
@@ -69,8 +90,8 @@
 .hero-bg {
     position: absolute;
     background-color: #0042c6;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: -1;
     overflow: hidden;
 }
@@ -89,27 +110,6 @@
     width: 600px;
 }
 
-@keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(720deg);
-    }
-}
-
-@keyframes grow {
-    0% {
-        transform: scale(1) rotate(37deg);
-    }
-    50% {
-        transform: scale(1.3) rotate(96deg);
-    }
-    100% {
-        transform: scale(1) rotate(37deg);
-    }
-}
-
 #hero-bg-plus {
     animation: spin 2.5s ease-in-out infinite reverse;
 }
@@ -122,16 +122,6 @@
     animation: grow 5s ease-in-out infinite;
 }
 
-@media only screen and (max-width: 1026px) {
-    .hero-bg-hidden {
-        display: none;
-    }
-    #hero-bg-blob {
-        top: 45vh;
-        left: -40vw;
-    }
-}
-
 /* Pages/index.js */
 .hero {
     /* background-color: #0042c6; */
@@ -141,10 +131,18 @@
     align-items: center;
 }
 
-.test {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    background-color: #fff;
-    margin-top: 100px;
+@media only screen and (max-width: 1026px) {
+    /* Components/HeroBackground */
+    .hero-bg-hidden {
+        display: none;
+    }
+    #hero-bg-blob {
+        top: 45vh;
+        left: -40vw;
+    }
+
+    /* Pages/index.js */
+    .logo {
+        max-width: 60%;
+    }
 }
