--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,7 +36,8 @@ html {
     background-color: transparent;
     position: relative;
     padding: 0 0;
-    /* margin-top: 0rem; */
+    margin-left: 0;
+    margin-right: auto;
 }
 
 .button:hover {
@@ -50,7 +51,7 @@ html {
     width: 100%;
     height: 2px;
     border-radius: 4px;
-    background-color: black;
+    background-color: #0042c6;
     bottom: 4px;
     left: 0;
     transform-origin: right;
@@ -306,15 +307,6 @@ html {
     width: 20rem;
 }
 
-#index-s1-b1 {
-    margin-left: 0;
-    margin-right: auto;
-}
-
-#index-s1-b1::before {
-    background-color: #0042c6;
-}
-
 .container {
     padding-left: 5vw;
     padding-right: 5vw;
@@ -358,6 +350,72 @@ html {
     font-size: 2rem;
     color: #0042c6;
     margin-bottom: 2rem;
+}
+
+/* Pages/about.js */
+#about-hero {
+    background-color: #e55511;
+    background-image: url("/graphics/about.svg");
+    background-position: 50% 90%;
+    background-repeat: no-repeat;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#about-hero .container {
+    padding-right: 40vw;
+}
+
+#about-hero .section-title {
+    font-family: "Oxygen";
+    font-weight: 600;
+    font-size: 3rem;
+    color: white;
+    margin-bottom: 2rem;
+}
+
+#about-hero .subtitle {
+    color: white;
+}
+
+#about-hero-button::before {
+    background-color: white;
+}
+
+/* Pages/humans,js */
+#humans-hero {
+    background-color: #242424;
+    background-image: url("/graphics/humans.svg");
+    background-position: 40% 75%;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    padding-top: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#humans-hero .section-title {
+    font-family: "Oxygen";
+    font-weight: 600;
+    font-size: 3rem;
+    color: white;
+    margin-bottom: 2rem;
+}
+
+#humans-hero .subtitle {
+    color: white;
+}
+
+#humans-hero-c1 {
+    padding-right: 5vw;
+}
+
+#humans-hero-c2 {
+    margin-top: 5rem;
+    /* padding-bottom: 2rem; */
 }
 
 @media only screen and (max-width: 1026px) {
@@ -433,5 +491,23 @@ html {
     }
     #index-s2 .column {
         margin-top: 2rem;
+    }
+
+    /* Pages/about.js */
+    #about-hero .container {
+        padding-right: 5vw;
+    }
+
+    /* Pages/humans.js */
+    #humans-hero-c1 {
+        padding-right: 0;
+    }
+
+    #humans-hero-c2 {
+        padding-top: 5rem;
+    }
+
+    #humans-hero {
+        background-position: 40% 30%;
     }
 }
