--- a/styles/globals.css
+++ b/styles/globals.css
@@ -321,6 +321,46 @@ html {
     text-align: center;
 }
 
+/* Components/MemberCard.js */
+
+.member-card {
+}
+
+.member-card .card-image {
+    width: 100%;
+    background-size: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    border-radius: 1rem;
+}
+
+.member-card .card-image:after {
+    /* CSS trick to make the div a responsive square */
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+}
+
+.member-card .card-content {
+    padding: 0;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.member-card .card-content .member-name {
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+.member-card .card-content .member-position {
+    color: #0042c6;
+    margin-top: 0.5rem;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+/* Components/TeamCards.js */
+
 /* Pages/index.js */
 .hero {
     /* background-color: #0042c6; */
@@ -623,142 +663,40 @@ html {
     border-radius: 1rem;
 }
 
-#humans-cards {
-    padding: 0 100px 0 100px;
+.team-selector {
+    margin-top: 3rem;
+    margin-bottom: 1rem;
 }
 
-#humans-cards .section-title {
-    font-family: "Oxygen";
-    font-weight: 600;
-    font-size: 3rem;
-    color: black;
-    margin-bottom: 2rem;
-    margin-top: 40px;
+.team-selector .button {
+    margin-right: 1rem;
+    font-size: 1.5rem;
 }
 
-#next-chapters {
-    padding: 0 100px 0 100px;
+.team-selector .selected {
+    color: #0042c6;
 }
 
-#next-chapters .section-title {
-    font-family: "Oxygen";
-    font-weight: 600;
-    font-size: 3rem;
-    color: black;
-    margin-bottom: 2rem;
-    margin-top: 40px;
+.team-selector .selected::before {
+    transform-origin: left;
+    transform: scaleX(1);
 }
 
-#next-chapters p {
-
-}
-
-.member-card {
-    box-shadow: none;
-    font-family: "Oxygen";
-    max-width: none;
-    width: 200px;
-    margin-right: 45px;
-    transition: 0.3s;
-    margin-bottom: 10px;
-}
-
-.member-card:hover{
-    /* box-shadow: 0 0 20px #36c69b; */
-    width: 205px;
+.team-selector .button:hover {
     cursor: pointer;
 }
 
-.member-card img {
-    height: 200px;
-    border-radius: 0.25rem;
-    object-fit: cover;
-    transition: 0.3s;
+.team-selector .button:last-child {
+    margin-right: 0;
 }
 
-.member-card:hover img{
-    width: 210px;
-    height: 210px;
+.team-message {
+    margin-bottom: 2rem;
+    font-size: 1rem;
 }
 
-.member-card .card-content {
-    padding: 0;
-}
-
-.member-card .member-name {
-    margin: 0;
-    font-size: 24px;
-}
-
-.member-card .position {
-    color: #35C69B;
-    font-weight: 700;
-}
-
-.member-card .major {
-    font-size: 16px;
-    font-style: italic;
-    color: #242424;
-    margin: 5px 0;
-}
-
-#humans-cards .card-list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-#teams-bar {
-    margin: 30px 0;
-}
-
-ul.teams-navbar {
-    display: flex;
-    justify-content: space-between;
-    width: 40%;
-}
-
-.teams-navbar p {
-    margin: 10px 0;
-    font-size: 24px;
-    color: #242424;
-}
-
-.teams-navbar p:hover {
-    cursor: pointer;
-}
-
-.teams-navbar .team-active {
-    text-decoration: underline;
-    font-weight: 700;
-}
-
-#humans-cards {
-    background-image: url("/graphics/director-bg.svg");
-    background-repeat: no-repeat;
-    background-position: 60% 10%;
-    background-repeat: no-repeat;
-    background-size: 500px;
-    /* background-position-x: 700px;
-    background-position-y: center; */
-}
-#directors {
-    position: relative;
-}
-#directors:after {
-    content: url("/graphics/director-photo-bg.svg");
-    display: inline-block;
-    position: absolute;
-    width: 80px;
-    left: 450px;
-    top: -50px;
-}
-
-.director-bg {
-    z-index: 999;
-    position: absolute;
-    width: 80px;
-    left: 550px;
+.sponsor-icons {
+    margin-top: 2rem;
 }
 
 /* Pages/events.js */
