--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,10 +11,6 @@
     --y: 0;
 }
 
-.hero-bg {
-    transition: transform .2s ease-out;
-}
-
 #hero-bg-1 {
     transform: translate(calc(1px * var(--x)), calc(1px * var(--y)));
 }
@@ -209,9 +205,9 @@ html {
     overflow: hidden;
 }
 
-.hero-bg div {
+/* .hero-bg div {
     transition: all 0.5s ease-out;
-}
+} */
 
 .hero-bg div img {
     position: absolute;
