--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,9 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 @import url("https://fonts.googleapis.com/css2?family=Martel+Sans&family=Montserrat&family=Oxygen:wght@400&display=swap");
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* Bg Animate */
 
