--- a/styles/globals.css
+++ b/styles/globals.css
@@ -282,7 +282,7 @@ html {
     color: white;
     font-family: "Oxygen";
     font-size: 1.2rem;
-    padding-bottom: 4rem;
+    padding-bottom: 2rem;
 }
 
 .footer .logo {
@@ -347,6 +347,36 @@ html {
     transform: scaleX(1);
 }
 
+.footer .column-small-text {
+    margin-bottom: 0.25rem;
+    font-size: 1rem;
+    position: relative;
+    width: fit-content;
+}
+
+.footer .column-small-text p:hover {
+    cursor: pointer;
+}
+
+.footer .column-small-text p::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    border-radius: 4px;
+    background-color: white;
+    bottom: -2px;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform 0.3s ease-in-out;
+}
+
+.footer .column-small-text p:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
 #footer-message {
     margin-top: 2rem;
     /* center */
@@ -355,6 +385,7 @@ html {
     align-items: center;
     font-size: 1rem;
     text-align: center;
+    flex-direction: column;
 }
 
 /* Components/MemberCard.js */
