--- a/styles/globals.css
+++ b/styles/globals.css
@@ -127,18 +127,14 @@ html {
 
 /* Components/Navbar.js */
 
-.is-active .navbar-item {
-  margin-left: 2vw;
-  margin-right: 2vw;
-}
-
-.navbar-button::before {
-  transition: transform 0.3s ease-in-out;
-}
-
 .navbar-button:hover::before {
   transform-origin: left;
   transform: scaleX(1);
+}
+
+.is-active .navbar-item {
+  margin-left: 2vw;
+  margin-right: 2vw;
 }
 
 /* Components/HeroBackground */
@@ -569,6 +565,15 @@ html {
 
 /* Pages/humans,js */
 #humans-hero {
+  background-color: #242424;
+  background-image: url("/graphics/humans.svg");
+  background-position: 40% 75%;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  padding-top: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-position: 40% 75%;
   padding-top: 10rem;
 }
